--- a/Novità.html
+++ b/Novità.html
@@ -28,25 +28,72 @@
 <section><br><br>
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
 
-<p><big><big><span style="text-decoration: underline;">2022<br><br>ANNIVERSARI DEI CELEBRI VIGNOLESI</span></big></big></p><br><br>
+<p><big><big><span style="text-decoration: underline;">2023<br><br>ANNIVERSARI DEI CELEBRI VIGNOLESI</span></big></big></p><br><br>
  
-<p><big><strong>PIETRO ANTONIO BERNARDONI</strong>, poeta, drammaturgo e librettista: <strong>350 ANNI DALLA NASCITA</strong>.<br><br> 
- 
-<strong>PIETRO MINGHELLI</strong>, pittore e insegnante: <strong>200 ANNI DALLA MORTE</strong>.<br><br> 
- 
-<strong>LODOVICO ANTONIO MURATORI</strong>, sacerdote, erudito, storico, archivista, trattatista e molto altro: <strong>350 ANNI DALLA NASCITA</strong>.<br><br>   
- 
-<strong>AUGUSTA REDORICI ROFFI</strong>, maestra elementare, studiosa e divulgatrice di storia locale e scienze naturali: <strong>100 ANNI DALLA NASCITA</strong>.<br><br>   
- 
-<strong>GIUSEPPE MARIA SOLI</strong>, architetto, pittore, insegnante e direttore di Accademia delle Belle Arti: <strong>200 ANNI DALLA MORTE</strong>.</big></p>
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Tufo in una fotografia scattata il 4 aprile 2022.</big></p><br>
 <img src="img/FOTO VARIE/viatufo.jpg" width="600" height="800"><br><br><br><br><br><br>
-	
+
+<p><big><big><span style="text-decoration: underline;">17 aprile 2023</span></big></big></p><br><br>
+
+<p><big>Oggi dedichiamo spazio a <i>Casimiro Jodi</i> (Modena, 1886 - Rovigo, 1948) e al suo quadro <i>Ingresso a Vignola</i> (1930).<br><br>
+Jodi frequentò l’Istituto di Belle Arti a Modena dal 1904 al 1910 ed ebbe come maestri, fra gli altri, i pittori Achille Boschi (Modena, 1852 - ivi, 1930) e Gaetano Bellei (Modena, 1857 - ivi, 1922). Dopo aver vinto il premio “Luigi Poletti” (1908), egli soggiornò per tre anni a Roma, dove seguì i corsi del grande Giulio Aristide Sartorio (Roma, 1860 - ivi, 1932) all’Accademia di San Luca, e poi per un anno a Firenze; durante questa fase di perfezionamento, il giovane artista lasciò saggi pittorici di genere e di ricostruzione storica, mostrando un linguaggio luminoso e spedito. Nel frattempo, il nostro personaggio ebbe modo di rivelare una forte vena umoristica nelle vignette caricaturali che egli pubblicò nel giornale modenese di satira «Il Duca Borso» (1910).<br>
+Durante la Prima Guerra Mondiale, Jodi fu comandante di tappa nella linea ferroviaria che andava da Verona al Lago di Garda. Venuto in contatto con il mondo artistico veneto e conosciuti Felice Casorati (Novara, 1883 - Torino, 1963) e Nino Barbantini (Ferrara, 1884 - ivi, 1952), egli cominciò ad allontanarsi dal modello accademico, abbracciando una pittura caratterizzata da tocchi vibranti e ricchi di colore che gli valse gli elogi della critica durante le esposizioni nazionali alle quali partecipò con quadri di vario soggetto e di varia ambientazione.<br>
+Alla Quadriennale romana del 1931, Jodi presentò l’olio su tela (89x100 cm) <i>Ingresso a Vignola</i>, eseguito l’anno precedente. L’opera venne poi acquisita dal Comune di Vignola e collocata all’interno della Residenza Municipale (Villa Tosi Bellucci). In questi giorni, tuttavia, il quadro è provvisoriamente esposto presso i locali dell’Associazione “Amici dell’Arte Vignola a.p.s.” nell’ambito della seconda edizione della mostra <i>Di qua e di là dal fiume</i>, inaugurata l’8 aprile e visitabile fino al 1° maggio, la quale vede protagonisti Jodi e il pittore Carlo Corsi (Nizza, 1879 - Bologna, 1966).<br><br>
+Nell’immagine, una fotografia di <i>Ingresso a Vignola</i> appena scattata all’interno della seconda edizione della mostra vignolese <i>Di qua e di là dal fiume</i>.<br>
+<center><img src="img/FOTO VARIE/quadro.jpg" width="600" height="550"></center></big></p><br><br><br>
+
+<p><big><big><span style="text-decoration: underline;">5 aprile 2023</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>STORIA DELLA TORTORA</strong></i>, la ventinovesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+<i>Cardellino</i>: E perché gemi sempre o tortora? Nulla mai ti rallegra né ti solleva l’animo dalla mestizia? Nulla può rapirti seco nei campi ridenti della gioia? Neppure l’amore del tuo diletto ti sveglia al gaudio, t’innebbria di letizia?<br>
+<i>Tortora</i>: Non sempre poi sono trista come tu credi; e quantunque goda di raro, nondimeno qualche volta io provo i casti e veri godimenti, quelli dell’affetto purissimo dello sposo mio.»<br>
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>
+
+<p><big><big><span style="text-decoration: underline;">4 aprile 2023</span></big></big></p><br><br>
+<p><big>Sabato 1° e domenica 2 aprile <i>Celebri Vignolesi</i> ha tenuto gratuitamente visite guidate presso la Casa Natale di Lodovico Antonio Muratori e lungo le vie storiche dei dintorni.<br>
+Oggi, 4 aprile, pubblichiamo questo post per ringraziare coloro che, provenienti da località vicine e lontane, hanno partecipato alle visite e ci hanno dimostrato ancora una volta come il patrimonio storico e culturale della nostra città desti il grande interesse delle persone.<br>
+Nell’ambito della nostra opera di valorizzazione di questo patrimonio, avvisiamo che sabato 8 aprile, dalle 15 alle 18, saremo di nuovo presenti presso la Casa Natale di Muratori per lo svolgimento di ulteriori visite guidate gratuite, e che sarà possibile partecipare anche senza prenotazione anticipata.<br><br>
+
+Sara Scaglioni e Piero Venturelli – <i>Celebri Vignolesi</i><br><br>
+
+Nell’immagine la prima di copertina del grosso volume che dal 1950 raccoglie le firme dei visitatori della camera genetliaca di Muratori.<br>
+<center><img src="img/FOTO VARIE/libro muratori.jpg" width="540" height="620"></center></big></p><br><br><br>
+
+<p><big><big><span style="text-decoration: underline;">20 marzo 2023</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL CANE DELLA VECCHIA DAMA</strong></i>, la ventottesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+«Fu regalato ad una vecchia dama un piccolo cane barbone, il quale essendo di fino accorgimento e d’ingegno vivace seppe in breve tempo guadagnarsi gli affetti della padrona, sì che ne divenne la delizia, la gioia. Saltavale in grembo, vi si accovacciava aggomitolato o vi si stendeva in atto di abbandono, leccavale delicatamente le mani e la faccia grinzosa; guaiolavale vicino in sentimento di amore, guardavala con vigilanza gelosa, tenevale compagnia assidua, indovinandone i pensieri e tosto, facendo a seconda de’ desiderii di lei. La vecchia ne gli è grata; onde lo considera come il suo più fedele e più affezionato amico; e lo rimunera con ogni sorta di cure e di riguardi, offerendo a lui il primo boccone dell’asciolvere e del pranzo, comperandogli confetture ed altre squisitezze fino ad indurgliene sazietà; accarezzandolo, baciandolo di frequente, e non mantenendo in servigio od in amistà se non quelle persone che gli dimostrino predilezione. Se tema che sia ammalato, manda per uno dei più reputati medici; se debba fargli imbottire un cuscinetto dove possa adagiarsi, chiama il primo degli artefici a ciò, e gli ordina che scelga le robe più morbide; se voglia farlo tondere, ricorre sempre dal parrucchiere di maggior grido, vincendo la costoro ritrosia di umiliarsi ad un cane, con larga ricompensa di moneta. Perché non avrebbe a largheggiare di tali lautezze e di tali dispendii al caro barboncino, che tanto si merita e più colle sue grazie e colle sue amorevolezze? Nella primavera presente, verso il mezzo del maggio, avendo cominciato il sole a splender caldo più del consueto, ed annunziando una primavera precoce, la dama credette che non fosse troppo presto di spogliarlo della lunga lana, e il parrucchiere venne incontanente con forbici inglesi, arrotate di fresco, a compiere la difficile e delicata operazione. Il mastro tonditore menò le mani e l’arnese con sì bel garbo che la bestiuola non diede cenno di sofferirne; ed aguzzando l’ingegno perché dall’essere tosato ricevesse bella grazia, gli levò tutto il pelo, radendolo a fior di pelle, tranne che gli lasciò un ciuffetto per ciascuna gamba alla giuntura, ne rispettò le orecchie ed il labbro superiore, da cui sporsero e trionfarono due pennacchi orgogliosi che a mo’ di baffi ne resero più arguta, più arrogante la faccia.»<br>
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>
+
+<p><big><big><span style="text-decoration: underline;">8 marzo 2023</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>I DUE OVI AL FUOCO</strong></i>, la ventisettesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+«Una cuoca valente, amante della nettezza e premurosa verso i suoi padroni, ebbe un dì da cuocere due ovi, o, a dire più giusto, da intepidirli sulla cenere, acciò ricevessero quel blando calore onde si rappigliassero un tantino vicino al guscio, in modo che l’albume diventasse simile a morbida e tremula gelatina. Desiderando che riuscissero di pieno aggradimento della sua signora che le li aveva chiesti, li scelse de’ freschissimi, di guscio candido, ovali perfettamente, da appagare il palato non solo, ma benanco gl’occhi. Dopo averli collocati sur un piatto di maiolica, nel riguardarli restò ammirata della loro leggiadria, sì che perdette qualche minuto a compiacersi della loro vista, lieta che fosse per esercitare l’opera sua intorno a due ovi sì galanti ed aggraziati, da guadagnarle larghi encomii quando li avrebbe presentati su bianco tovagliolo, col bianco sale ed il pane di fiore a colei che li domandò.»<br>
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>
+
+<p><big><big><span style="text-decoration: underline;">25 febbraio 2023</span></big></big></p><br><br>
+<p><big>Oggi ci soffermiamo su un importante artista del secolo scorso,<strong>IVO SOLI</strong>.<br><br>
+
+Nato l’8 luglio 1898 a Spilamberto (in località Confine) da genitori di umili condizioni, questo personaggio inizialmente fu apprendista da un fabbro maniscalco di Vignola, paese dove si trasferì da bambino con i familiari e al quale rimase sempre legatissimo, e poi poté frequentare (grazie a un benefattore e al Comune di Vignola) il Regio Istituto di Belle Arti a Modena. Soli interruppe tuttavia gli studi nel 1917, quando venne chiamato alle armi, in zona di guerra, nel Terzo Reggimento Genio Telegrafico; l’anno successivo, lo scoppio di una mina gli procurò ferite alla testa.<br>
+Dopo la fine del Primo Conflitto Mondiale, il nostro personaggio riprese gli studi a Modena e, nel 1921, conseguì la licenza del corso speciale di Scultura. Lasciata la sua terra per Milano, egli cominciò ben presto a farsi conoscere in tutt’Italia come scultore valente e, poco più che trentenne, fu nominato professore di Plastica e Composizione alla Scuola Superiore degli Artefici presso l’Accademia di Belle Arti di Brera. Nello stesso momento, Soli diede avvio a una meno nota, ma di un certo rilievo qualitativo, carriera di pittore.<br>
+Durante la vita, il nostro personaggio partecipò a mostre, rassegne ed esposizioni nazionali e internazionali d’arte. Sue opere sono presenti in diverse località italiane (compresa Vignola).
+Non di rado Soli tornava per qualche tempo in Emilia, dove aveva conservato molte amicizie. Il 10 dicembre 1976, nel corso di uno di questi soggiorni, egli si spense a Vignola.<br><br>
+Nell’immagine, un’opera giovanile di Soli,<i>Fanciulla china</i> (1925), bronzo; collezione privata.<br>
+<img src="img/celebri vignolesi/Soli Ivo/fanciullapiegata.jpg" width="450" height="650"></big></p><br><br><br>
+
+<p><big>Esattamente un anno fa, nel febbraio 2022, <i>Celebri Vignolesi</i>ha dato avvio alla trascrizione integrale delle quarantaquattro favole che compongono <strong><i>IL FAVOLEGGIATORE</i></strong>, raccolta stampata nel 1857 da <i><strong>FRANCESCO SELMI</strong></i> (1817-1881) per i tipi torinesi della Paravia. Con il testo che presentiamo oggi, <i><strong>L’ASTRONOMO ED IL SOLE</strong></i>, si è giunti alla pubblicazione della ventiseiesima favola. Nel passaggio dalla versione a stampa alla versione trascritta, abbiamo conservato sia le forme oggi (e, talora, già nel XIX secolo) desuete sia quelle da tempo considerate scorrette e da evitarsi, sia i probabili refusi (come «or’ora»), cancellato il punto fermo dopo il titolo di ogni favola e normalizzato all’uso odierno gli accenti.<br><br>
+
+Qui sotto, l’<i>incipit</i> di <i><strong>L’ASTRONOMO ED IL SOLE</strong></i>:<br>
+«Uno dei più illustri astronomi del nostro secolo, non saprei se italiano o straniero, soleva durante i giorni sereni dirigere il suo telescopio all’osservazione del sole; i cui raggi, entrando nello strumento, e raccolti e disposti dal giuoco mirabilmente artificioso di lenti e di specchi, ne riverberavano una chiara imaginetta. Il grand’astro, che ha la vista tanto lunga ed acuta per quanto spazia lontanamente colla sua luce, fissò a caso l’attenzione al cannocchiale appuntatogli contro; e, fattosi a considerare con insolita curiosità i moti di chi ne teneva il governo, si accorse in breve, come quel remoto e piccolissimo coserello che riconobbe per un uomo si fosse proposto di scrutarlo da tutti i lati, notarne le apparenze, di qui scendere a congetturare di qual natura sia, e procedere innanzi fino a indovinarla, a riconoscerla al giusto.»<br>
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>
+
+<p><big><big><span style="text-decoration: underline;">2 febbraio 2023</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>LA CAMELIA</strong></i>, la venticinquesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+«Una vaghissima camelia estolleva altera la sua leggiadra corolla in mezzo ad una aiuola, circondata da altri fiori, belli e odorosi. Essa fra tutte riceveva dal giardiniere più assidue le cure, e lodi più frequenti e maggiori dai riguardanti; sicché avrebbe dovuto chiamarsi contenta. Eppure non la era: di tempo in tempo piegava il capo da una parte nell’aspetto di persona sconsolata, né rialzavalo poi sì leggermente, quantunque vedendola afflitta il giardiniere accorresse tosto ad ismuoverle il terreno al piede, ad inaffiarla, a provvedere in altri modi acciò ritornasse alla prima gaiezza.»<br>
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>
+
 <p><big><big><span style="text-decoration: underline;">15 gennaio 2023</span></big></big></p><br><br>
 <p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>LA FIDANZATA</strong></i>, la ventiquattresima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
 «Una leggiadra e castissima fanciulla arrivò finalmente alla vigilia de’ suoi sponsali, statile lungamente contrastati da un perverso tutore, il quale faceva indegnamente suo utile delle splendide fortune di lei. Oh di che dolce e piena letizia le sorrise l’anima dopo la certezza che nel giorno vegnente sarebbe cessata la sua dura servitù! Oh io sarò domani congiunta con nodo indissolubile al mio diletto; e nessuno sorgerà più ad inventare nuovi impedimenti che mi tolgano di possederlo! Beata me nell’avvenire giocondo che mi si dischiude innanzi dopo le molte sofferenze ed i frequenti sospiri.»<br>
-Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>	
-	
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>
+
 <p><big><big><span style="text-decoration: underline;">6 gennaio 2023</span></big></big></p><br><br>
 <p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL FRINGUELLO VIAGGIATORE</strong></i>, la ventitreesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
 «Una giovane rondine, nel ritorno dal suo primo passaggio, fu ricevuta con liete e festose accoglienze da tutti gli uccelli suoi amici; i quali, non appena sentirono il primo alito di aere intepidito, stettero in sull’aspettarla, bramasi di udire da lei le nuove dei lontani paesi a cui peregrinò. Fu un garrire dei più confusi intorno a lei, un saltellare, uno svolazzare dei più inquieti e curiosi, da che ciascuno volevale andare più accosto degli altri, affine di cogliere dalla voce di lei direttamente i ragguagli delle meraviglie osservate e degli accidenti occorsi.»<br>
@@ -274,7 +321,7 @@ Se vuoi saperne di più su Paradisi, visita il suo <a href="https://sarascaglion
 <p><big>Nell’immagine sottostante, Palazzo Tirelli ai nostri giorni.</big></p><br>
 <p><img src="img/celebri vignolesi/Paradisi/palazzo tirelli.jpg" width="470" height="700"></p><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
