--- a/Redorici Roffi.html
+++ b/Redorici Roffi.html
@@ -51,7 +51,7 @@ Fonte: Augusta Redorici Roffi - Maria Grazia Grilli,<br> <i>Il molino di Campigl
 progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”,<br> Savignano s.P. [MO], Tipolitografia FG, 2010, pp. 107-122: 115.</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/giovane.jpg" width="650" height="700"><br><br>
 	
-<p><center><big>Fotografia che ritrae la signora nella prima maturità. Fonte: eredi della famiglia Redorici Roffi.</big></center></p>
+<p><center><big>Fotografia che ritrae la signora nella prima maturità. Fonte: Raccolta eredi famiglia Redorici Roffi.</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/ovale2.jpg" width="470" height="630"><br><br>
 
 <p><center><big>La Redorici Roffi nella tarda maturità. Fonte: volantino cartaceo dell’iniziativa allestita<br> il 15 dicembre 2022 nel Museo Civico a lei intitolato (vedi più sotto la locandina completa in formato digitale).</big></center></p>
