--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -95,7 +95,7 @@
 <td><big><big><strong><a href="acquaariafuoco.html">30. L’acqua, l’aria ed il fuoco</a></strong></td></tr>
 
 <tr>
-<td><big><big><strong><a href="rigogolo.html">31. Il rigogolo e lo stagno</a></strong></td>
+<td><big><big><strong><a href="rigogoloestorno.html">31. Il rigogolo e lo storno</a></strong></td>
 <td><big><big><strong><a href="volpe.html">32. La volpe e le galline</a></strong></td></tr>
 
 <tr>
