--- a/Tosi.html
+++ b/Tosi.html
@@ -32,7 +32,7 @@
 <big>(1811-1876)</big></center></h3><br><br><br>
 <h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 <p><big><strong>LUCA ANTONIO TOSI</strong>, medico, amministratore locale, letterato, studioso e patriota, nacque a Vignola il 27 ottobre 1811.<br>
-Questo personaggio era il primogenito di Barlamo juniore, stimato medico del paese ed erede di possedimenti nel Ferrarese e nel Modenese, e di Angelica Maria Bellucci, appartenente a una delle famiglie più cospicue del luogo.<br>
+Questo personaggio era il primogenito di Barlamo juniore (1785-1816), stimato medico del paese ed erede di possedimenti nel Ferrarese e nel Modenese, e di Angelica Maria Bellucci (1784-1876), appartenente a una delle famiglie più cospicue del luogo.<br>
 Di idee liberali, Tosi manifestò subito una ferma avversione nei confronti del regime austroestense e non esitò a offrire il suo aiuto dapprima per giungere all’unificazione nazionale sotto Casa Savoia e poi per consolidare il nuovo Regno e “fare gli Italiani”, diventando in questo modo un’insigne figura del Risorgimento a Vignola e nei dintorni.<br>  
 
 Il nostro personaggio si laureò in Medicina il 30 luglio 1837 all’Università di Modena, per poi perfezionarsi a Firenze presso l’Ospedale di Santa Maria Nuova sotto la guida del celebre Maurizio Bufalini (1787-1875). Tornato nel suo paese natale, iniziò a praticarvi con zelo e generosità la professione di medico, e il 3 aprile 1841 contrasse matrimonio con Maria Luigia Lolli, figlia del notaio Luca Antonio, dalla quale ebbe un figlio (Giacomo) e tre figlie (Diamantina, Angelica e Isabella).<br>  
@@ -42,7 +42,7 @@ Tosi fu podestà di Vignola e capitano della Guardia Nazionale durante il Govern
 Tosi pubblicò alcuni scritti di natura medica e, in occasione delle Feste Muratoriane (a duecento anni dalla nascita di <strong>Lodovico Antonio Muratori</strong> [1672-1750]), una <i>Storia cronologica di Vignola ad uso delle scuole</i> (Vignola, Tipografia di Antonio Bizzarri, 1872), ove convivono in maniera sapiente il rigore scientifico e una brillante <i>verve</i> divulgativa.<br>  
 
 Essendosi prodigato alacremente per tutta la vita affinché le condizioni dei propri concittadini potessero migliorare da ogni punto di vista, il nostro personaggio va riconosciuto come una delle figure più significative della Vignola ottocentesca e, dunque, occorre affiancarlo per importanza a <strong>Francesco Selmi</strong> (1817-1881), <strong>Alessandro Plessi</strong> (1824-1907) e <strong>Giovanni Rodolfi</strong> (1828-1896).<br>
-Malato di cuore da tempo, egli morì nella Villa Tosi Bellucci (già Bellucci) del suo paese natale il 2 dicembre 1876. Fu inumato nell’antico camposanto di Vignola; trascorsi poco più di vent’anni, una volta completata la struttura, le spoglie vennero traslate nel nuovo cimitero cittadino (quello ancora in uso), e precisamente nella cappella Tosi Bellucci.</strong></big></p><br><br><br>
+Malato di cuore da tempo, egli morì nella Villa – o Casino – Tosi Bellucci (già Bellucci) del suo paese natale il 2 dicembre 1876. Fu inumato nell’antico camposanto di Vignola; trascorsi poco più di vent’anni, una volta completata la struttura, le spoglie vennero traslate nel nuovo cimitero cittadino (quello ancora in uso), e precisamente nella cappella Tosi Bellucci.</strong></big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><big><big><center>Prima di copertina di <i>Storia cronologica di Vignola ad uso delle scuole del cav. prof. Luca Tosi Vignolese</i>,<br> Vignola, Tipografia di Antonio Bizzarri, 1872. Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Tosi/tosi.jpg" width="380" height="580"></center><br><br>
@@ -50,7 +50,7 @@ Malato di cuore da tempo, egli morì nella Villa Tosi Bellucci (già Bellucci) d
 <center><img src="img/celebri vignolesi/Tosi/Tomba.jpg" width="550" height="600"></center><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></center></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
