--- a/ottobre.html
+++ b/ottobre.html
@@ -81,7 +81,7 @@ Nelle immagini sottostanti, due fotografie scattate il 15 febbraio 2020, in occa
 Venuto al mondo in una famiglia ricca e stimata, questo personaggio svolse la professione di medico e ricoprì diverse importanti cariche politico-amministrative nella comunità della sua terra d’origine, rivelandosene una delle figure in assoluto più operose, lungimiranti e rappresentative del XIX secolo.<br>
 Nemico del regime austroestense già negli anni giovanili, s’impegnò per arrivare all’unificazione nazionale sotto la dinastia sabauda e, poi, per cementare il nuovo Regno e “fare gli Italiani”.<br>
 Diede alle stampe scritti di carattere medico e una <i>Storia cronologica di Vignola ad uso delle scuole</i> (1872).<br>  
-Tosi morì nel suo paese natale il 2 dicembre 1876. Fu sepolto nell’antico camposanto di Vignola, poi nella cappella Tosi Bellucci del nuovo (l’odierno) cimitero cittadino.<br><br>
+Tosi morì nel suo paese natale il 2 dicembre 1876. Fu sepolto nell’antico camposanto di Vignola, poi nella cappella di famiglia del nuovo (l’odierno) cimitero cittadino.<br><br>
 Nell’immagine qui sotto, la prima di copertina di <i>Storia cronologica di Vignola ad uso delle scuole del cav. prof. Luca Tosi Vignolese</i>, Vignola, Tipografia di Antonio Bizzarri, 1872. Fonte: google.com</p><br><br>
 <img src="img/celebri vignolesi/Tosi/tosi.jpg" width="400" height="600"><br><br><br>
 <p><strong><big><center>Vuoi saperne di più su Luca Antonio Tosi?<br>Allora, visita il suo <a href="Tosi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
