--- a/Garavini.html
+++ b/Garavini.html
@@ -29,7 +29,7 @@
 <section>
 	<p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br><br>
 <h3><center><big><big>CARLO GARAVINI</big></big><br><br>
-<big>(1807 - non prima del 1874)</big></center></h3><br><br><br>
+<big>(1807 - non prima del 1879)</big></center></h3><br><br><br>
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	<p><big><strong>CARLO GARAVINI</strong>, diplomatico, viaggiatore, avventuriero, commerciante, geografo e armatore, nacque a Vignola il 6 maggio 1807.<br>
 
@@ -55,7 +55,7 @@ Garavini aveva anche un fratello minore, Barlamo, il quale era un valente ebanis
 		
 Nel 1867 Garavini, appassionato d’arte, riuscì a rintracciare e ad acquistare il disperso <i>Autoritratto</i> di <strong>Giuseppe Maria Soli</strong> (1747-1822), illustre architetto e pittore vignolese, e lo fece giungere alla sorella appena rimasta vedova. Quest’opera, che risale all’età matura dell’artista (di sicuro, venne dipinta non prima del 1805), risulta a tutt’oggi conservata nel suddetto Casino e ha subito un restauro nel 2015.<br> 
 
-Allo stato attuale degli studi, non siamo al corrente né della data né del luogo della morte di Garavini (nel 1874, però, egli risultava sicuramente in vita; esistono molte probabilità che lo fosse ancora nel 1880, e forse lo era anche nel 1885).</big></p><br><br><br>
+Allo stato attuale degli studi, non siamo al corrente né della data né del luogo della morte di Garavini (alla fine del 1879, però, egli risultava sicuramente in vita; forse lo era anche nel 1880, e forse lo era anche nel 1885).</big></p><br><br><br>
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><center><big><big>Arsenale della Marina di Algeri, incisione anonima del 1835. Fonte: google.com</center></big></big></p>
@@ -68,7 +68,7 @@ Allo stato attuale degli studi, non siamo al corrente né della data né del luo
 <img src="img/celebri vignolesi/Garavini Carlo/palazzo Ambra.jpg" width="850" height="600"><br><br><br>
 <p class="index-p"><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
