--- a/maggio.html
+++ b/maggio.html
@@ -40,17 +40,17 @@ Il «Don Chisciotte» cessò con il numero del 7 gennaio 1885.<br><br>
   
 Nell’immagine qui sotto, la prima pagina del numero inaugurale del «Don Chisciotte».</big></p><br><br>
  <center><img src="img/celebri vignolesi/Barbanti Brodano/donchisciotte.jpg" width="450" height="600"></center><br><br><br>
-<big><big><strong><center>Vuoi saperne di più su Giuseppe Barbanti Bròdano?<br>Allora, visita il suo <a href="Barbanti Bròdano.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong><br><br><br>
+<big><big><strong><center>Vuoi saperne di più su Giuseppe Barbanti Bròdano?<br>Allora, visita il suo <a href="Barbanti Bròdano.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong><br><br><br><br>
     
 <p><big><strong>6 maggio 1807</strong>: nacque a Vignola <strong>CARLO GARAVINI</strong>, diplomatico, viaggiatore, avventuriero, commerciante, geografo e armatore.<br><br> 
 
-Lontano parente di <strong>Francesco Selmi</strong> (1817-1881), Carlo Garavini trascorse l’infanzia a Vignola, ma lasciò ben presto il paese natale per esercitare il commercio in alcuni Paesi del Mediterraneo. Imparato l’arabo e diversi dialetti locali, ebbe significative esperienze nel campo della diplomazia internazionale (in Algeria, fra l’altro, fu incaricato d’affari dell’emiro e console degli Stati Uniti d’America) e compì esplorazioni che gli consentirono non solo di venire a conoscenza di usi e costumi di varie popolazioni dell’Africa settentrionale e del Vicino Oriente, ma anche di inviare ad alcuni musei crani beduini e vari reperti, e di rettificare alcuni errori commessi dai geografi.<br>
+Lontano parente di <strong>Francesco Selmi</strong> (1817-1881), Carlo Garavini trascorse l’infanzia a Vignola, e lasciò ben presto l’Emilia per esercitare il commercio in alcuni Paesi del Mediterraneo. Imparato l’arabo e diversi dialetti locali, ebbe significative esperienze nei campi del commercio e della diplomazia internazionali (in Algeria, fra l’altro, fu incaricato d’affari dell’emiro e console degli Stati Uniti d’America), e inoltre compì esplorazioni che gli consentirono non solo di venire a conoscenza di usi e costumi di varie popolazioni dell’Africa settentrionale e del Vicino Oriente, ma anche di spedire ad alcuni musei crani beduini e vari reperti, e di rettificare alcuni errori commessi dai geografi.<br>
 
-In età matura, il nostro personaggio – fra l’altro – fu per qualche tempo proprietario vaporetti che collegavano Napoli e Ischia. All’epoca, egli risiedeva su quell’isola, e precisamente nella magnifica villa che assunse il suo cognome e che ora è maggiormente nota come Palazzo D’Ambra.<br> 
+Presa dimora a Napoli, nel 1840 Garavini vi sposò Carolina Sauvé, ragazza appartenente a una ricca famiglia del luogo. In tempi brevi, riuscì a diventare un personaggio in vista nell’alta società della metropoli borbonica: fra l’altro, ricoprì la carica di dirigente delle dogane portuali partenopee e fu proprietario dei vaporetti che collegavano la città e Ischia. Egli risiedeva su quell’isola, e precisamente nella magnifica villa che assunse il suo cognome e che ora è maggiormente nota come Palazzo D’Ambra. Subito dopo l’Unità d’Italia, fu socio a Napoli del <i>Caffè dell’Europa</i>, locale pubblico alla moda.<br>  
 
 Nel 1867 Garavini, appassionato d’arte, riuscì a rintracciare e ad acquistare il disperso <i>Autoritratto</i> di <strong>Giuseppe Maria Soli</strong> (1747-1822), e lo fece giungere alla sorella Luigia (1796-1870), appena rimasta vedova di Giambattista Bellucci (1781-1866), uno degli uomini più stimati e ricchi della Vignola ottocentesca.<br>
 
-Non conosciamo né la data né il luogo della scomparsa di Garavini, ma sicuramente non è anteriore al 1874.<br><br> 
+Non conosciamo né la data né il luogo della scomparsa del nostro personaggio ma sicuramente egli morì non prima del 1879.<br><br> 
 
 Nell’immagine qui sotto, una foto recente del Palazzo D’Ambra (già Villa Garavini), a Ischia.</big></p><br><br>
 <img src="img/celebri vignolesi/Garavini Carlo/palazzo Ambra.jpg" width="850" height="600"><br><br><br>
@@ -78,7 +78,7 @@ Nell’immagine qui sotto, il <i>Monumento ai Caduti</i> eseguito da Luigi Bondi
 <p><strong><big><center>Vuoi saperne di più su Luigi Bondioli?<br>Allora, visita il suo <a href="Bondioli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br>
 <p><strong><a href="Anniversari.html">Indice dei mesi</a></strong></center></p><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
