--- a/Garavini.html
+++ b/Garavini.html
@@ -62,6 +62,8 @@ Allo stato attuale degli studi, non siamo al corrente né della data né del luo
 <img src="img/celebri vignolesi/Garavini Carlo/arsenale.jpg" width="900" height="500"><br><br><br>	
 	<p><center><big><big>L’emiro algerino Abd-el-Kader (1808-1883). Fonte: google.com</center></big></big></p>
 <img src="img/celebri vignolesi/Garavini Carlo/Emiro.jpg" width="700" height="500"><br><br>	
+<p><center><big><big>Gabriele Smargiassi (1798-1882), <i>Veduta del Golfo di Napoli</i> (1857), olio su tela; collezione privata. Fonte: google.com</center></big></big></p>
+<img src="img/celebri vignolesi/Garavini Carlo/smargiassi.jpg" width="750" height="500"><br><br>
 <p><center><big><big>Palazzo d’Ambra (già Villa Garavini) a Ischia, immagine risalente al 1970 circa. Fonte: google.com</center><big></big></p>
 <img src="img/celebri vignolesi/Garavini Carlo/1970.jpg" width="850" height="600"><br><br>
 <p><center>Foto recente del Palazzo D’Ambra. Fonte: google.com</center></p>
