--- a/Minghelli.html
+++ b/Minghelli.html
@@ -38,7 +38,7 @@ Il nostro personaggio affiancò al mestiere d’insegnante la libera professione
 
 Il nostro personaggio si segnalò anche come autore di quadri (su tela) e – non di rado in collaborazione con Vincenzi – come curatore di allestimenti scenografici.<br> 
 
-Tra le più significative testimonianze della sua operosa ma purtroppo breve carriera artistica, se ne possono annoverare due a Vignola: la decorazione parietale della dimora del conte Giuseppe Galvani (1781-1817), risalente al 1810-1815, e quella della Villa Bellucci (in seguito, Tosi Bellucci, dal 1916 Residenza Municipale), l’autentico capolavoro di Minghelli e uno dei più ragguardevoli esempi di vasto ciclo pittorico di scuola neoclassica che ancora esistano nel Modenese, realizzata tra il 1820 e il 1822.<br>
+Tra le più significative testimonianze della sua operosa ma purtroppo breve carriera artistica, se ne possono annoverare due a Vignola: la decorazione parietale della dimora di Giuseppe Galvani (1781-1817), risalente al 1810-1815, e quella della Villa Bellucci (in seguito, Tosi Bellucci, dal 1916 Residenza Municipale), l’autentico capolavoro di Minghelli e uno dei più ragguardevoli esempi di vasto ciclo pittorico di scuola neoclassica che ancora esistano nel Modenese, realizzata tra il 1820 e il 1822.<br>
 
 Il nostro personaggio morì il 29 giugno 1822, appena quarantaduenne, a Modena, città dove aveva fissato la propria residenza nel 1804 e dove si era sposato (con Maria Teresa Bardoni) nel 1821. Non lasciò figli.<br>  
 
@@ -58,7 +58,7 @@ A Minghelli il paese natale ha voluto dedicare una strada. Inoltre, sono tuttora
 <center><img src="img/celebri vignolesi/Minghelli/lapidechiesa.jpg" width="700" height="480"></center><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
