--- a/Garavini.html
+++ b/Garavini.html
@@ -53,9 +53,9 @@ La sorella di Garavini, Luigia (1796-1870), era la moglie di Giambattista Belluc
 
 Garavini aveva anche un fratello minore, Barlamo, il quale era un valente ebanista che, nel 1862, lasciò erede del suo cospicuo patrimonio la Congregazione di Carità di Vignola al fine di rendere l’ospedale più ampio, comodo e salubre, e con due letti costantemente a disposizione di altrettanti infermi poveri. Nel Casino Bellucci, è ancora presente un suo bel ritratto del 1837 (in questo periodo, risulta sottoposto a restauro).<br>  
 		
-Nel 1867 Garavini, appassionato d’arte, riuscì a rintracciare e ad acquistare il disperso <i>Autoritratto</i> di <strong>Giuseppe Maria Soli</strong> (1747-1822), illustre architetto e pittore vignolese, e lo fece giungere alla sorella appena rimasta vedova. Quest’opera, che risale all’età matura dell’artista (di sicuro, venne dipinta non prima del 1805), risulta a tutt’oggi conservata nel suddetto Casino e ha subito un restauro nel 2015.<br> 
+Nel 1867 Garavini, appassionato d’arte, riuscì a rintracciare e ad acquistare il disperso <i>Autoritratto</i> di <strong>Giuseppe Maria Soli</strong> (1747-1822), illustre architetto e pittore vignolese, e lo fece giungere alla sorella appena rimasta vedova. Quest’opera, che risale all’età matura dell’artista (di sicuro, venne dipinta non prima del 1805), è a tutt’oggi conservata nel suddetto Casino e ha subito un restauro nel 2015.<br> 
 
-Allo stato attuale degli studi, non siamo al corrente né della data né del luogo della morte di Garavini (alla fine del 1879, però, egli risultava sicuramente in vita; forse lo era anche nel 1880, e forse lo era anche nel 1885).</big></p><br><br><br>
+Allo stato attuale degli studi, non siamo al corrente né della data né del luogo della morte di Garavini (alla fine del 1874, però, egli risultava sicuramente in vita; forse lo era anche nel 1885).</big></p><br><br><br>
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><center><big><big>Arsenale della Marina di Algeri, incisione anonima del 1835. Fonte: google.com</center></big></big></p>
