--- a/Bondioli.html
+++ b/Bondioli.html
@@ -50,6 +50,10 @@ Nel 1928 1928 il nostro personaggio contribuì a istituire e a potenziare, nel s
 La morte colse il nostro personaggio a Vignola il 21 gennaio 1957. Le sue spoglie riposano nel locale cimitero.</big></p><br><br><br>
 	
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
+<p><big><big><center>Ritratto fotografico di Bondioli nella prima maturità. Fonte: Antonio Sgroi (testi a cura di), <i>Luigi Bondioli a cinquant’anni dalla scomparsa</i>, Catalogo della Mostra (Vignola, rocca, 31 marzo - 15 aprile 2007), progetto, organizzazione e allestimento della Mostra a cura del Centro Studi Vignola, coordinamento del Catalogo a cura di Giuliana Zagnoli Sirotti, Savignano sul Panaro (MO), Tipolitografia F.G., 2007, prima di copertina.</center></big></big><br>
+<center><img src="img/celebri vignolesi/Bondioli/bondioli.jpg" width="500" height="530"><br><br><br>
+<p><big><big><center>Bondioli in età matura con una sua classe di studenti. Fonte: Francesco Gavioli, <i>Vignola. Un popolo una chiesa una storia</i>,<br> 2 voll., Vignola, Libreria "dei Contrari", 1994, vol. II, p. 489 (siamo nella scheda <i>Bondioli Luigi</i>, pp. 486-490).</center></big></big></p>
+<center><img src="img/celebri vignolesi/Bondioli/classe.jpg" width="680" height="450"><br><br><br>
 <p><big><big><center>Il <i>Monumento ai Caduti</i> realizzato da Bondioli e attualmente collocato nell’aiuola centrale del giardino<br> della Villa Tosi Bellucci (lo scatto risale a pochi giorni prima della pulitura avvenuta nell’ottobre 2021).</center></big></big><br>
 <center><img src="img/celebri vignolesi/Bondioli/monumento.jpg" width="500" height="700"><br><br><br>
 	<p><big><big><center>Il <i>Monumento ai Caduti</i> subito dopo la pulitura.</center></big></big></p>
