--- a/Soli2.html
+++ b/Soli2.html
@@ -34,41 +34,42 @@
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	<p></p>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-	
 <p><center><big><big>Soli. Fonte: <i>Ivo Soli</i>, presentazione di Renzo Biasion, a cura della Cassa di Risparmio di Vignola,<br> Bologna, Arti Grafiche Tamari, 1979, senza paginazione.</big></big></center><br>
-	<img src="img/celebri vignolesi/Soli Ivo/Soli.jpg" width="430" height="600"><br><br>
-	<p><center><big><big><i>Fanciulla china</i> (1925), bronzo; collezione privata.</big></big></center><br>
+<img src="img/celebri vignolesi/Soli Ivo/Soli.jpg" width="430" height="600"><br><br>
+<p><center><big><big>Soli all’opera nel suo laboratorio di Vignola. Fonte: Francesco Gavioli, <i>Vignola. Un popolo una chiesa una storia</i>,<br> 2 voll., Vignola, Libreria "dei Contrari", 1994, vol. II, p. 559 (siamo nella scheda <i>Soli Ivo</i>, pp. 556-565).</big></big></center><br>
+<img src="img/celebri vignolesi/Soli Ivo/solilaboratorio.jpg" width="580" height="580"><br><br> 
+<p><center><big><big><i>Fanciulla china</i> (1925), bronzo; collezione privata.</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/fanciullapiegata.jpg" width="450" height="650"><br><br> 
-		<p><center><big><big><i>La dormiente</i> (1937), terracotta; collezione privata.</big></big></center><br>
+<p><center><big><big><i>La dormiente</i> (1937), terracotta; collezione privata.</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/la dormiente.jpg" width="650" height="450"><br><br>
 <p><center><big><big><i>Nudo femminile seduto</i> (1937-1940), bronzo. Dal 1996 in poi, Vignola, Piazza Giardino d’Europa.</big></big></center><br>
-	<img src="img/celebri vignolesi/Soli Ivo/donnanera.jpg" width="500" height="600"><br><br>
-	<p><center><big><big><i>Nudo virile</i> (1940-1942), gesso; collezione privata.</big></big></center><br>
+<img src="img/celebri vignolesi/Soli Ivo/donnanera.jpg" width="500" height="600"><br><br>
+<p><center><big><big><i>Nudo virile</i> (1940-1942), gesso; collezione privata.</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/nudovirile.jpg" width="450" height="600"><br><br>
 <p><center><big><big><i>Fanciulla accovacciata</i> (1945-1948), bronzo. Dal 1994 in poi, Vignola, Via Selmi,<br> davanti alla porta di ingresso della casa natale di <strong>Lodovico Antonio Muratori</strong> (1672-1750).</big></big></center><br>
-	<img src="img/celebri vignolesi/Soli Ivo/statua.jpg" width="450" height="610"><br><br>
-	<p><center><big><big><i>Fanciulla in piedi</i> (1970-1975), bronzo; collezione privata.</big></big></center><br>
+<img src="img/celebri vignolesi/Soli Ivo/statua.jpg" width="450" height="610"><br><br>
+<p><center><big><big><i>Fanciulla in piedi</i> (1970-1975), bronzo; collezione privata.</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/fanciullainpiedi.jpg" width="330" height="680"><br><br>
 <p><center><big><big>Soli intento a modellare il monumento a Carlo Porta, inaugurato nel 1966 al Verziere di Milano. Fonte: <i>Ivo Soli</i>, cit.</big></big></center><br>
-	<img src="img/celebri vignolesi/Soli Ivo/monumento.jpg" width="430" height="600"><br><br>
+<img src="img/celebri vignolesi/Soli Ivo/monumento.jpg" width="430" height="600"><br><br>
 <p><center><big><big>Monumento a Carlo Porta, bronzo.</big></big></center><br>
-	<img src="img/FOTO VARIE/monumento.jpg" width="380" height="770"><br><br><br>
+<img src="img/FOTO VARIE/monumento.jpg" width="380" height="770"><br><br><br>
 <p><center><big><big><i>Fanciulla con bicicletta</i> (1970), bronzo; collezione privata.</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/fanciullainbici.jpg" width="505" height="670"><br><br>
 <p><center><big><big><i>Fanciulla seduta</i> (1970-1975), bronzo; collezione privata.</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/fanciullaseduta.jpg" width="450" height="600"><br><br>
 <p><center><big><big><i>Pietà</i>, bronzo dorato, data sconosciuta. Vignola, chiesa dei Santi Nazario e Celso.</big></big></center><br>
-	<img src="img/celebri vignolesi/Soli Ivo/pietà.jpg" width="1000" height="600"><br><br><br>
-	<p><center><big><big>Medaglia per il centesimo anniversario della fondazione della Cassa di Risparmio di Vignola (1974). <br> Bronzo, forma circolare, diametro di 45 mm e contorno liscio. Prima immagine, <i>recto</i>: ragazza seduta di 3/4 a destra; <br> in alto a sinistra, in piccolo e con carattere tutto maiuscolo, «IVO SOLI». <br> Seconda immagine, <i>verso</i>: in tutto maiuscolo, «CENTO ANNI DELLA CASSA DI RISPARMIO DI VIGNOLA • 1974 •»; <br> tale iscrizione circonda quattro api presso un favo (si tratta di un’immagine che ricorda, un po’ vagamente, <br> lo stemma ufficiale della Cassa di Risparmio di Vignola). Fonte: google.com</big></big></center><br>
+<img src="img/celebri vignolesi/Soli Ivo/pietà.jpg" width="1000" height="600"><br><br><br>
+<p><center><big><big>Medaglia per il centesimo anniversario della fondazione della Cassa di Risparmio di Vignola (1974). <br> Bronzo, forma circolare, diametro di 45 mm e contorno liscio. Prima immagine, <i>recto</i>: ragazza seduta di 3/4 a destra; <br> in alto a sinistra, in piccolo e con carattere tutto maiuscolo, «IVO SOLI». <br> Seconda immagine, <i>verso</i>: in tutto maiuscolo, «CENTO ANNI DELLA CASSA DI RISPARMIO DI VIGNOLA 1974»; <br> tale iscrizione circonda quattro api presso un favo (si tratta di un’immagine che ricorda, un po’ vagamente, <br> lo stemma ufficiale della Cassa di Risparmio di Vignola). Fonte: google.com</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/Recto.jpg" width="515" height="510"><br><br>
-	<img src="img/celebri vignolesi/Soli Ivo/Verso.jpg" width="515" height="510"><br><br><br>
+<img src="img/celebri vignolesi/Soli Ivo/Verso.jpg" width="515" height="510"><br><br><br>
 <p><center><big><big><i>Ritratto di donna anziana</i>, olio su tela, data sconosciuta; collezione privata. Fonte: google.com</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/quadro1.jpg" width="490" height="580"><br><br><br>
 <center><big><big><i>Ritratto di uomo</i>, olio su tela, data sconosciuta; collezione privata. Fonte: google.com</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/quadro2.jpg" width="600" height="660"><br><br><br>
-<center><big><big><i>Il ponte di Vignola nel maggio 1945,</i> olio su tela, forse risalente a quello stesso 1945; collezione privata.<br> Fonte: sopraccoperta sulla prima di copertina di <strong>Attilio Neri</strong> ​(1921-2009), <i>Il ponte di Vignola in pace e in guerra<br> con 155 illustrazioni, 2 tavole fuori testo e 6 immagini della guerra a Modena</i>, Vignola, Fabbri Arti Grafiche Editrice, 1984.</big></big></center><br>
+<center><big><big><i>Il ponte di Vignola nel maggio 1945​,</i> olio su tela, forse risalente a quello stesso 1945; collezione privata.<br> Fonte: sopraccoperta sulla prima di copertina di <strong>Attilio Neri</strong> ​(1921-2009), <i>Il ponte di Vignola in pace e in guerra<br> con 155 illustrazioni, 2 tavole fuori testo e 6 immagini della guerra a Modena</i>, Vignola, Fabbri Arti Grafiche Editrice, 1984.</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/quadro3.jpg" width="820" height="580"><br><br><br>
-<p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
+	<p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
