--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -96,7 +96,7 @@
 
 <tr>
 <td><big><big><strong><a href="rigogoloestorno.html">31. Il rigogolo e lo storno</a></strong></td>
-<td><big><big><strong><a href="volpe.html">32. La volpe e le galline</a></strong></td></tr>
+<td><big><big><strong><a href="volpegalline.html">32. La volpe e le galline</a></strong></td></tr>
 
 <tr>
 <td><big><big><strong><a href="morente.html">33. La morente</a></strong></td>
