--- a/Soli2.html
+++ b/Soli2.html
@@ -36,7 +36,7 @@
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><center><big><big>Soli. Fonte: <i>Ivo Soli</i>, presentazione di Renzo Biasion, a cura della Cassa di Risparmio di Vignola,<br> Bologna, Arti Grafiche Tamari, 1979, senza paginazione.</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/Soli.jpg" width="430" height="600"><br><br>
-<p><center><big><big>Soli all’opera nel suo laboratorio di Vignola. Fonte: Francesco Gavioli, <i>Vignola. Un popolo una chiesa una storia</i>,<br> 2 voll., Vignola, Libreria "dei Contrari", 1994, vol. II, p. 559 (siamo nella scheda <i>Soli Ivo</i>, pp. 556-565).</big></big></center><br>
+<p><center><big><big>Soli all’opera nel suo laboratorio di Vignola. Fonte: Francesco Gavioli, <i>Vignola. Un popolo una chiesa una storia</i>,<br> 2 voll., Vignola, Libreria “dei Contrari”, 1994, vol. II, p. 559 (siamo nella scheda <i>Soli Ivo</i>, pp. 556-565).</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/solilaboratorio.jpg" width="580" height="580"><br><br> 
 <p><center><big><big><i>Fanciulla china</i> (1925), bronzo; collezione privata.</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/fanciullapiegata.jpg" width="450" height="650"><br><br> 
@@ -71,7 +71,7 @@
 <img src="img/celebri vignolesi/Soli Ivo/quadro3.jpg" width="820" height="580"><br><br><br>
 	<p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
