--- a/marzo.html
+++ b/marzo.html
@@ -100,7 +100,7 @@ Alessandro Plessi trascorse buona parte dell’esistenza a Vignola e di quel Com
 
 Il nostro personaggio mandò alle stampe – fra l’altro – il libro <i>Istorie vignolesi narrate a’ suoi figli da Alessandro Plessi</i> (Vignola, Tipografia di Antonio Monti, s.d. [ma: 1885]) e curò la prima edizione di <i>De Vineolae moderniori statu chronica enarratio</i> (Bononiae, Apud Nicolaum Zanichelli […], 1872), opera lasciata manoscritta da <strong>Domenico Belloi</strong> (1660-1712).<br>  
 
-Plessi morì a Zenzano (territorio che comprendeva le odierne frazioni Formica e – in buona parte – Garofano) di Savignano sul Panaro il 6 ottobre 1907. La sua tomba si trova nel cimitero di Vignola.<br><br>
+Plessi morì il 6 ottobre 1907 a Zenzano (territorio che comprendeva le odierne frazioni Formica e – in buona parte – Garofano) di Savignano sul Panaro. La sua tomba si trova nel cimitero di Vignola.<br><br>
 Nell’immagine sottostante, Plessi nel 1864. Fonte: Raccolta famiglia Plessi.</big></p><br><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/plessi.jpg" width="390" height="650"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Alessandro Plessi?<br>Allora, visita il suo <a href="Plessi1.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
