--- a/Neri1.html
+++ b/Neri1.html
@@ -39,9 +39,9 @@
 
 Figlio dei romagnoli <strong>Nèttore Neri</strong> (1883-1970), magistrato e poeta originario di Barbiano di Cotignola, e della imolese Bianca Bacchilega (1892-1977), a tre anni il nostro personaggio si trasferì con il resto della famiglia a Vignola, dove il padre era stato nominato pretore. Da allora, Attilio Neri visse sempre nella cittadina modenese, della cui comunità fu per decenni uno degli esponenti più illustri.<br>
 
-Medico di professione, il nostro personaggio lavorò a lungo come pediatra presso l’ospedale di Vignola (andando in quiescenza nel 1984 da aiuto pediatra responsabile) e figurò tra gli animatori, dalla sua fondazione (1954), della sezione locale dell’Associazione Volontari Italiani del Sangue (AVIS)<br>
+Medico di professione, il nostro personaggio lavorò a lungo come pediatra presso l’ospedale di Vignola (andando in quiescenza nel 1984 da aiuto pediatra responsabile) e figurò tra gli animatori, dalla sua fondazione (1954), della sezione locale dell’Associazione Volontari Italiani del Sangue (AVIS).<br>
 
-Uomo dai molteplici interessi, Neri abbracciò gli ideali comunisti e partecipò attivamente alla vita pubblica del suo paese di adozione svolgendo vari uffici di natura politico-amministrativa, compreso quello di sindaco (1951-1954); inoltre, esercitò la carica di sindaco nella locale Cassa di Risparmio (1964-1968). Grande appassionato di sport, assunse – fra l’altro – la presidenza della squadra calcistica dell’<i>Unione Sportiva Vignolese</i> durante la stagione 1959/1960.<br>  
+Uomo dai molteplici interessi, Neri abbracciò gli ideali comunisti (anche se non tardò a muovere dure critiche al PCI e poi ad allontanarsene) e partecipò attivamente alla vita pubblica del suo paese di adozione svolgendo vari uffici di natura politico-amministrativa, compreso quello di sindaco (1951-1954); inoltre, esercitò la carica di sindaco nella locale Cassa di Risparmio (1964-1968). Grande appassionato di sport, assunse – fra l’altro – la presidenza della squadra calcistica dell’<i>Unione Sportiva Vignolese</i> durante la stagione 1959/1960.<br>  
 
 Neri fu uno dei più importanti e autorevoli studiosi novecenteschi delle tradizioni e della storia vignolesi, dedicò fondamentali ricerche alla lessicografia dialettale e raccolse un’imponente raccolta di fotografie e cartoline. Mandò alle stampe diverse pubblicazioni concernenti i campi di suo maggiore interesse, fra le quali merita di essere ricordato almeno il <i>Vocabolario del dialetto modenese con voci, frasi, modi di dire, proverbi e repertorio italiano-modenese</i>, uscito a Sala Bolognese (BO) presso presso Arnaldo Forni Editore nel 1973 (otto anni dopo, ne comparve una seconda edizione, aggiornata, corretta e arricchita di 1300 nuovi vocaboli), opera di rilevanza capitale che venne preparata anche su consiglio e incoraggiamento del celebre linguista, filologo e storico della lingua italiana Bruno Migliorini (1896-1975). All’incirca nel 1974, poi, Neri scrisse un romanzo che fu stampato dalla Tipolitografia F.G. di Savignano sul Panaro (MO) soltanto nel 2002: <i>Storia di un calciatore</i> (Vignola, Consulta del Volontariato).<br>  
 
@@ -73,7 +73,7 @@ A Neri, nella sua città di adozione, risulta attualmente intitolata una Farmaci
 	
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
