--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -99,7 +99,7 @@
 <td><big><big><strong><a href="volpegalline.html">32. La volpe e le galline</a></strong></td></tr>
 
 <tr>
-<td><big><big><strong><a href="morente.html">33. La morente</a></strong></td>
+<td><big><big><strong><a href="lamorente.html">33. La morente</a></strong></td>
 <td><big><big><strong><a href="aquila.html">34. L’aquila e la gazza</a></strong></td></tr>
 <tr>
 <td><big><big><strong><a href="luce.html">35. La luce elettrica</a></strong></td>
