--- a/Novità.html
+++ b/Novità.html
@@ -32,6 +32,35 @@
  
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Tufo in una fotografia scattata il 4 aprile 2022.</big></p><br>
 <img src="img/FOTO VARIE/viatufo.jpg" width="600" height="800"><br><br><br><br><br><br>
+	
+<p><big><big><span style="text-decoration: underline;">19 maggio 2023</span></big></big></p><br><br>
+
+<p><big><i>Celebri Vignolesi</i> desidera esprimere la <strong>massima solidarietà</strong> verso il <strong>Maestro Giovanni Bartoli</strong> e sua moglie <strong>Lily Roglia</strong> nonché verso il Comune di Roncofreddo (FC), per la <strong>frana</strong> causata in località Sorrivoli dal maltempo dei giorni scorsi.</big></p><br><br>
+
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>LA VOLPE E LE GALLINE</strong></i>, la trentaduesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+
+«Chi oserà negare che la volpe non sitisca il sangue delle galline, di cui cerca le pacifiche dimore, per introdurvisi di notte tempo e menarvi stragi orribili con insana crudeltà? Imperocché la mala e feroce bestia non si contenta di pascere le carni di una per acquetare la fame, ma piacesi di scannarle tutte, più godendosi dello strazio che ne fa e del macello compiuto, che non della lauta imbandigione procacciata al suo ghiotto palato. È rabbia di sterminio, non bisogno di cibo, quella frenesia che la indemonia; per cui, quando s’intromise ne’ pollai, sbalza qua e là, assanna, sgozza, squarcia; tanto meno sazia quanto più uccise delle vittime innocenti.»<br>
+
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>
+
+<p><big><big><span style="text-decoration: underline;">2 maggio 2023</span></big></big></p><br><br>
+
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL RIGOGOLO E LO STORNO</strong></i>, la trentunesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+
+«Fu preso alla rete un rigogolo, e tosto imprigionato in gabbia di vimini, acciò col giallo vivace delle sue penne e il lesto saltellare desse vaghezza agli occhi, e procurasse compiacenza a chi possedevalo di udire a ripetersi: se non è magnifico quest’uccello!
+Sospirò amaramente la perduta libertà, e pigliò a tal noia della solitudine, che, quando collocavanlo sulla finestra, col pietoso guaire chiamava a sé gli altri uccelli, che gli si avvicinassero, venissero a tenergli un tantino di conversazione, a rendergli meno lugubri le lunghe ore delle interminabili giornate.»<br>
+
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>
+
+
+<p><big><big><span style="text-decoration: underline;">20 aprile 2023</span></big></big></p><br><br>
+
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>L’ACQUA, L’ARIA ED IL FUOCO</strong></i>, la trentesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+
+«La terra e l’acqua vennero in fiera stizza contro il fuoco, non per offesa ricevuta, sibbene per una somma di altre ragioni, le quali parvero loro sì buone e calzanti da inviperirsi nell’odio, e da giurarne lo sterminio. Ecco in breve i motivi dell’odio.»<br>
+
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>
+	
 
 <p><big><big><span style="text-decoration: underline;">17 aprile 2023</span></big></big></p><br><br>
 
